WIP: Clear HTTP authentication cache in GitConfigFileProvider