@@ -81,8 +81,11 @@ jib {
         mainClass = "org.eclipse.apoapsis.ortserver.workers.config.EntrypointKt"
         creationTime = "USE_CURRENT_TIMESTAMP"
 
-        if (System.getProperty("idea.active").toBoolean()) {
-            jvmFlags = listOf("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5020")
+        // Allow access to internal HTTP auth cache for clearing credentials
+        jvmFlags = mutableListOf("--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED").apply {
+            if (System.getProperty("idea.active").toBoolean()) {
+                add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5020")
+            }
         }
     }
 }
